# Lamatic-Docs

./: .codespellignore  .env.template  .gitignore  CONTRIBUTING.md  DOCUMENTATION_REVIEW.md  MIGRATION.md  README.md  Untitled  agents.md  bun.lockb  global.d.ts  llm.txt  mdx-components.jsx  mdx-components.tsx  next-sitemap.config.js  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  style.css  theme.config.tsx  tsconfig.json
.github/: auto_assign-issues.yml  copilot-instructions.md
app/: Providers.jsx  SidebarSwitcher.jsx  layout.jsx  layout.tsx  not-found.jsx  providers.tsx
components/: AgentKitTemplate.md  AgentKitTemplate.mdx  AgentKitTemplate.tsx  AgentKitsCategories.tsx  AgentKitsGallery.tsx  AgentKitsShowcase.tsx  AgentsKitsIndex.tsx  AnalyticsProvider.tsx  AppsDataSourcesTable.tsx  Background.tsx  BenefitCard.tsx  BrandkitCard.tsx  BrandkitDownload.tsx  ChatbotScript.tsx  Contributors.tsx  CookbookIndex.tsx  CopyPageMarkdown.tsx  CustomTOC.tsx  DocsFooter.tsx  FAQAccordion.tsx  FeaturesSection.tsx  FooterMenu.tsx  FooterWrapper.tsx  GitHubBadge.tsx  HeroSection.tsx  ImageCollage.tsx  ImageSlider.tsx  IntegrationOverviw.tsx  IntegrationsIndex.tsx  LogoContextMenu.tsx  MainContentWrapper.tsx  NodeOverview.tsx  NodeTypeInfo.tsx  NodesIndex.tsx  NotebookBanner.tsx  PageContributors.tsx  PartnersGrid.tsx  PopularAppsRow.tsx  ScreenshotCarousel.tsx  SectionRows.tsx  (+17 more)
content/: 404.mdx  _app.mdx  _meta.js  _meta.ts  ambassadors.mdx  index.mdx  support.mdx  terms.mdx
cookbook/: _routes.json
lib/: PageMapContext.jsx  agentKitData.ts  (+6 more)
(+1104 files in other folders)
