[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = [""]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
litellm = {extras = ["proxy"], version = "^1.35.20"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
